# Forge

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh
Forge/: CMakeLists.txt
Forge/src/: Forge.h
Forge/src/Forge/: ForgeApplication.cpp  ForgeApplication.h  imgui.ini
Forge/src/Forge/Assets/Material/: DefaultText.mat
Forge/src/Forge/Assets/Shaders/: Renderer2DQuad.frag  Renderer2DQuad.vert  Renderer2DText.frag  Renderer2DText.vert  Renderer3DMesh.frag  Renderer3DMesh.vert  TextShader.frag  TextShader.vert  cube.frag  cube.vert  default.frag  default.vert  grid.frag  grid.vert  rect.frag  rect.vert  sphere.frag  sphere.vert
Forge/src/Forge/BFUI/: Button.cpp  Button.h  Column.cpp  Column.h  DrawList.cpp  DrawList.h  Row.cpp  Row.h  TextView.cpp  TextView.h  Theme.cpp  Theme.h  Types.h  Widget.cpp  Widget.h  WidgetStack.cpp  WidgetStack.h  Window.cpp  Window.h
Forge/src/Forge/BFUI/UIPrimitives/: Panel.cpp  Panel.h
Forge/src/Forge/Components/: GuiComponent.cpp
Forge/src/Forge/Config/: Config.h  Entry.h
Forge/src/Forge/Core/: Handle.h  Hash.h  Time.h  Utils.h
Forge/src/Forge/Core/Log/: Log.cpp  Log.h  LogFormaters.h
Forge/src/Forge/Core/Module/: Module.h  ModuleStack.cpp  ModuleStack.h
Forge/src/Forge/Events/: Event.cpp  Event.h  ImplEvent.h  KeyCodes.h
Forge/src/Forge/FileWatch/: FileWatch.cpp  FileWatch.h
Forge/src/Forge/Plug/: Plugin.cpp  Plugin.h
Forge/src/Forge/Renderer/: BatchManager.cpp  BatchManager.h  Buffer.cpp  Buffer.h  BufferImpl.cpp  Camera.h  EditorCamera.cpp  EditorCamera.h  Font.cpp  Font.h  Framebuffer.cpp  Framebuffer.h  GraphicsContext.cpp  GraphicsContext.h  Handle.h  InAnyCase.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  OrbitalCamera.cpp  OrbitalCamera.h  RenderCommand.cpp  RenderCommand.h  RenderableObject.h  RenderableTarget.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  Renderer3D.cpp  Renderer3D.h  RendererBatch.cpp  RendererBatch.h  Shader.cpp  Shader.h  ShaderManager.cpp  ShaderManager.h  (+10 more)
Forge/src/Forge/Renderer/Buffer/: Buffer.cpp  Buffer.h  BufferImpl.cpp  BufferImpl.h
Forge/src/Forge/Renderer/Camera/: Camera.cpp  Camera.h  CameraController.cpp  CameraController.h  EditorCamera.cpp  EditorCamera.h
Forge/src/Forge/Renderer/Components/: MaterialComponent.h  MeshComponent.h
Forge/src/Forge/Renderer/Model/: Mesh.cpp  (+1 more)
Forge/src/ForgeAssets/Material/: config.cfg
sandbox/: CMakeLists.txt  main.cpp
sandbox/src/: EntryPoint.cpp
sandbox/src/Editor/: Editor.cpp  Editor.h
src/: CMakeLists.txt
src/Forge/: Application.cpp  Application.h  Forge.cpp  Forge.h  Utils.h
src/Forge/Events/: Event.cpp  Event.h  ImplEvent.h  KeyCodes.h
src/Forge/Logger/: Logger.cpp  Logger.h
src/Forge/Renderer/: GraphicsBackend.cpp  GraphicsBackend.h  GraphicsContext.cpp  GraphicsContext.h  Window.cpp  Window.h
src/backends/: CMakeLists.txt
src/backends/OpenGL/: CMakeLists.txt
src/backends/Vulkan/: CMakeLists.txt
(+32 files in other folders)
